tests/rustdoc-ui/invalid-cfg.stderr
error[E0539]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:2:1
   |
LL | #[doc(cfg = "x")]
   | ^^^^^^^^^^-----^^
   |           |
   |           expected this to be a list

error[E0805]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:3:1
   |
LL | #[doc(cfg(x, y))]
   | ^^^^^^^^^------^^
   |          |
   |          expected a single argument here
   |
help: if the struct should be enabled when all these predicates are, wrap them in `all`
   |
LL - #[doc(cfg(x, y))]
LL + #[doc(cfg(all(x, y)))]
   |
help: alternately, if the struct should be enabled when any of these predicates are, wrap them in `any`
   |
LL - #[doc(cfg(x, y))]
LL + #[doc(cfg(any(x, y)))]
   |

error[E0539]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:7:1
   |
LL | #[doc(cfg = "x")]
   | ^^^^^^^^^^-----^^
   |           |
   |           expected this to be a list

error[E0805]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:8:1
   |
LL | #[doc(cfg(x, y))]
   | ^^^^^^^^^------^^
   |          |
   |          expected a single argument here
   |
help: if the struct should be enabled when all these predicates are, wrap them in `all`
   |
LL - #[doc(cfg(x, y))]
LL + #[doc(cfg(all(x, y)))]
   |
help: alternately, if the struct should be enabled when any of these predicates are, wrap them in `any`
   |
LL - #[doc(cfg(x, y))]
LL + #[doc(cfg(any(x, y)))]
   |

error[E0539]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:12:1
   |
LL | #[doc(cfg = "x")]
   | ^^^^^^^^^^-----^^
   |           |
   |           expected this to be a list

error[E0805]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:13:1
   |
LL | #[doc(cfg(x, y))]
   | ^^^^^^^^^------^^
   |          |
   |          expected a single argument here
   |
help: if the struct should be enabled when all these predicates are, wrap them in `all`
   |
LL - #[doc(cfg(x, y))]
LL + #[doc(cfg(all(x, y)))]
   |
help: alternately, if the struct should be enabled when any of these predicates are, wrap them in `any`
   |
LL - #[doc(cfg(x, y))]
LL + #[doc(cfg(any(x, y)))]
   |

error[E0539]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:18:1
   |
LL | #[doc(cfg = "x")]
   | ^^^^^^^^^^-----^^
   |           |
   |           expected this to be a list

error[E0805]: malformed `doc` attribute input
  --> $DIR/invalid-cfg.rs:19:1
   |
LL | #[doc(cfg(x, y))]
   | ^^^^^^^^^------^^
   |          |
   |          expected a single argument here
   |
help: if the struct should be enabled when all these predicates are, wrap them in `all`
   |
LL - #[doc(cfg(x, y))]
LL + #[doc(cfg(all(x, y)))]
   |
help: alternately, if the struct should be enabled when any of these predicates are, wrap them in `any`
   |
LL - #[doc(cfg(x, y))]
LL + #[doc(cfg(any(x, y)))]
   |

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0539, E0805.
For more information about an error, try `rustc --explain E0539`.
